--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
+    "postcss": "^8.4.21",
+    "postcss-preset-env": "^7.8.3",
+    "sass": "^1.57.1",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
   }
