--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.0",
     "husky": "^8.0.3",
+    "lint-staged": "^13.1.0",
     "postcss": "^8.4.21",
     "postcss-preset-env": "^7.8.3",
     "prettier": "^2.8.2",
@@ -34,5 +35,11 @@
     "typescript": "^4.9.3",
     "vite": "^4.0.0",
     "vite-plugin-eslint": "^1.8.1"
+  },
+  "lint-staged": {
+    "**/*.{js,jsx,tsx,ts}": [
+      "npm run lint:script",
+      "git add ."
+    ]
   }
 }
