--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "sass": "^1.57.1",
     "typescript": "^4.9.3",
     "vite": "^4.0.0",
-    "vite-plugin-eslint": "^1.8.1"
+    "vite-plugin-eslint": "^1.8.1",
+    "vite-plugin-svgr": "^2.4.0"
   },
   "lint-staged": {
     "**/*.{js,jsx,tsx,ts}": [
